--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Categorias/Create.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label  class="control-label">Nombre</label>
                 <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+                <span asp-validation-for="Nombre" class="text-danger">El campo Nombre es obligatorio.</span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
