--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Edit.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Empleados/Edit.cshtml
@@ -39,10 +39,19 @@
                 <span asp-validation-for="Salario" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label class="control-label">Estado</label>
+                <select asp-for="Estado" class="form-select">
+                    <option value="1">Activo</option>
+                    <option value="0">Inactivo</option>
+                </select>
+                <span asp-validation-for="Estado" class="text-danger"></span>
+            </div>
+
 
             <input type="hidden" asp-for="UsuarioRegistro" />
             <input type="hidden" asp-for="FechaRegistro" />
-            <input type="hidden" asp-for="Estado" />
+           
             <input type="hidden" asp-for="UsuarioRegistro" />
 
 
