--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Edit.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Edit.cshtml
@@ -39,9 +39,12 @@
                 <input asp-for="FechaRegistro" class="form-control" />
                 <span asp-validation-for="FechaRegistro" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+           <div class="form-group">
+                <label class="control-label">Estado</label>
+                <select asp-for="Estado" class="form-select">
+                    <option value="1">Activo</option>
+                    <option value="0">Inactivo</option>
+                </select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
